updated css file for some layout issues

--- a/src/mousedb/static/css/mousedb.css
+++ b/src/mousedb/static/css/mousedb.css
@@ -80,23 +80,23 @@ td { padding-left: 5px;
 
 .no-border { border: none;}
 
-.breeder { 	color: #888888;
-			background: yellow url(images/ui-bg_highlight-hard_15_888888_1x100.png) 50% 50% repeat-x;
+.breeder { 	color: black;
+			background: yellow;
 }
 
-.non-resident-breeder { 	color: #888888;
-			background: #FFFF99 url(images/ui-bg_highlight-hard_15_888888_1x100.png) 50% 50% repeat-x;
+.non-resident-breeder { 	color: black;
+			background: #FFFF99;
 }
 
 .unweaned { 	color: #888888;
-			background: pink url(images/ui-bg_highlight-hard_15_888888_1x100.png) 50% 50% repeat-x;
+			background: pink;
 }
 
 .dead { 	    color: white;
-			background: red url(images/ui-bg_highlight-soft_100_deedf7_1x100.png) 50% 50% repeat-x; 
+			background: red; 
 		}
 		
-.dead a { 	    color: white;
+.dead a { 	color: white;
 		}
 		
 ul#menu {
@@ -114,14 +114,14 @@ ul#menu li a {
 	width: 10%;
 	height: 50px;
 	border: 1px solid #aed0ea; 
-	background: #deedf7 url(images/ui-bg_highlight-soft_100_deedf7_1x100.png) 50% 50% repeat-x; 
+	background: #deedf7 url(../images/ui-bg_highlight-soft_100_deedf7_1x100.png) 50% 50% repeat-x; 
 	color: #2779AA; 
 	font-weight: bold;
 }
 
 ul#menu li a:hover {
 	border: 1px solid #74b2e2; 
-	background: #e4f1fb url(images/ui-bg_glass_100_e4f1fb_1x400.png) 50% 50% repeat-x; 
+	background: #e4f1fb url(../images/ui-bg_glass_100_e4f1fb_1x400.png) 50% 50% repeat-x; 
 	font-weight: bold; 
 	color: #0070a3;
 }
@@ -142,14 +142,14 @@ select{
 
 table.form {
 	border: 1px solid #404040; 
-	background: #888888 url(images/ui-bg_highlight-hard_15_888888_1x100.png) 50% 50% repeat-x; 
+	background: #888888 url(../images/ui-bg_highlight-hard_15_888888_1x100.png) 50% 50% repeat-x; 
 	color: #ffffff; 
 }
 
 .errorlist {
 	text-align: center;
 	list-style-type: none;
-	background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
+	background: #fef1ec url(../images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
 	color: #cd0a0a;
 	border: 2px solid #cd0a0a;
 	text-align: center;
@@ -158,7 +158,7 @@ table.form {
 .debug {
 	text-align: center;
 	list-style-type: none;
-	background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
+	background: #fef1ec url(../images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
 	color: #2A70E8;
 	border: 2px solid #2A70E8;
 	text-align: center;
@@ -171,7 +171,7 @@ table.form {
 	color: #ffffff;
 	border: 2px solid #ffffff;
 	text-align: center;
-	background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
+	background: #fef1ec url(../images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
 
 }
 
@@ -182,7 +182,7 @@ table.form {
 	background-color: #DFF2BF;
 	border: 2px solid #4F8A10;
 	text-align: center;
-	background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
+	background: #fef1ec url(../images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
 }
 
 .warning {
@@ -191,7 +191,7 @@ table.form {
 	color: #FAB905;
 	border: 2px solid #FAB905;
 	text-align: center;
-	background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
+	background: #fef1ec url(../images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; 
 }
 
 .error {
@@ -199,7 +199,7 @@ table.form {
 	list-style-type: none;
 	text-align: center;
 	border: 1px solid #cd0a0a; 
-	background: #cd0a0a url(images/ui-bg_flat_15_cd0a0a_40x100.png) 50% 50% repeat-x; 
+	background: #cd0a0a url(../images/ui-bg_flat_15_cd0a0a_40x100.png) 50% 50% repeat-x; 
 	color: #ffffff; 	
 }
 
